--- a/awk.adoc
+++ b/awk.adoc
@@ -19,7 +19,7 @@ FPAT = "([^,]*)|(\"[^\"]+\")"
  NF       |  number of fields in current record         | -
  OFS      |  output field separator                     | " "
 
- # Records are separated by black lines and the field is the whole line
+ # Records are separated by blank lines and the field is the whole line
  BEGIN { RS = ""; FS = "\n" }
 
 === Loop Through Fields
@@ -120,13 +120,13 @@ SUBSEP   |  subscript separator                        | "\034"
 -------------------------+------------------------------------------------------------------
     FUNCTION             |              DESCRIPTION                                        
 -------------------------+------------------------------------------------------------------
-gsub(r,s)                |  subtitute s for r globally in $0, 
+gsub(regex,str)          |  replace everything matching regex with str in $0
                          |    return number of substitutions made 
-gsub(r,s,t)              |  substitute s for r globally in string t, 
+gsub(regex,s,t)          |  substitute all mathes of regex with s in string t, 
                          |    return number of substitutions made
-index(s,t)               |  return first position of string t in s, or 0 if t is not present
+index(str,substr)        |  return first position of substr in str, or 0 if t is not present
 length(s)                |  return number of characters in s
-match(s,r)               |  The pos in s where the regex r occurs. RSTART=pos of matched str 
+match(s,regex)           |  The pos in s where the regex occurs. RSTART=pos of matched str 
                          |      RLENGTH = len of matched str
 split(s,a)               |  split s into array a on 'FS', return number of fields, a[1] has the first field
 split(s,a,fs)            |  split s into array a on regex fs | return number of fields. | a[1] has first field
@@ -134,6 +134,7 @@ split(s,a,fs)            |  split s into array a on regex fs | return number of 
                             "." treat as literal "."
                             ".*" treat as regex
                             /./ treat as regex
+                            don't use single quotes to enclose fs
 
 sprintf(fmt,expr-list)   |  return expr-list formatted according to format string fmt
 sub(r,s)                 |  replace first match of regex r in $0 with with s
