--- a/python.adoc
+++ b/python.adoc
@@ -120,32 +120,36 @@ set.symmetric_difference      # union
 
 
 == Looping
-Looping over two lists at the same time
+Looping over two or more lists,sets etc. at the same time
 for color, ratio in zip(colors, ratios):
     print (color, ratio)
 
-zip can take any number of lists sets etc.
 
-looping over dict only prints keys
+looping over only keys of dict
 animals = {'birds':3, 'cats':2, 'dogs':1}
 for item in animals:
     print (f"I have {item}")
 
-To print both keys and values
+looping over both keys and values
+Method 1:
 for item in animals:
     print (f"I have {animals[item]} {item}")
 
-Better way to get both key and value in dict
+Method 2:
 for animal, count in animals.items():
     print (f"I have {count} {animal}")
 
 
+Print list values with index
 colors = [red, blue, green]
 ratios = [0.2, 0.3, 0.1]
-Get and index for a list
 for i, color in enumerate(colors):
     print(color, ratios[i])
 
+
+Range
+for i in range(1,11):
+    print (f"13 x {i:>2} = {13*i:>3}")
 
 
 == Built in functions for iterables list, dict, tuple, generator etc
